Fix glass_container width on mobile

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -79,7 +79,7 @@ main {
   gap: 6rem;
   margin: 0 auto;
   min-width: 100vw;
-  padding-inline: 4rem;
+  padding-inline: 2rem;
   padding-bottom: 12rem;
 }
 
@@ -88,7 +88,7 @@ main {
   margin-top: 10rem;
   width: 100%;
   height: 100%;
-  min-width: 36rem;
+  max-width: 36rem;
   min-height: 65rem;
   background: rgba(15, 23, 42, .4);
   /* border: 1px solid rgb(15, 23, 42); */
